@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.2-1
-Date: 2015-05-11
+Date: 2015-05-29
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
